# gettext

./: .gitignore
gettext-runtime/intl/: CMakeLists.txt  config.h  dcigettext.c  finddomain.c  gettextP.h  l10nflist.c  langprefs.c  libgnuintl.h  loadmsgcat.c  localcharset.c  lock.c  log.c  plural.c  wg_hooks.c  wg_hooks.h  wg_hooks_internal.h
